# TipRanksCrawler

./: .env.sample  README.md  browsers.py  main.py  merge.py  pyproject.toml
.github/workflows/: etl_pipeline.yaml
tipranks/: tipranks_2025-04-06_part1.csv  tipranks_2025-04-06_part2.csv  tipranks_2025-04-07_part1.csv  tipranks_2025-04-07_part2.csv  tipranks_2025-04-08.csv  tipranks_2025-04-08_part1.csv  tipranks_2025-04-08_part2.csv  tipranks_2025-04-12.csv  tipranks_2025-04-12_part1.csv  tipranks_2025-04-12_part2.csv  tipranks_2025-04-13_part2.csv  tipranks_2025-04-18.csv  tipranks_2025-04-18_part1.csv  tipranks_2025-04-18_part2.csv  tipranks_2025-04-19.csv  tipranks_2025-04-19_part1.csv  tipranks_2025-04-19_part2.csv  tipranks_2025-04-26.csv  tipranks_2025-04-26_part1.csv  tipranks_2025-04-26_part2.csv  tipranks_2025-05-03.csv  tipranks_2025-05-03_part1.csv  tipranks_2025-05-03_part2.csv  tipranks_2025-05-10.csv  tipranks_2025-05-10_part1.csv  tipranks_2025-05-10_part2.csv  tipranks_2025-05-17.csv  tipranks_2025-05-17_part1.csv  tipranks_2025-05-17_part2.csv  tipranks_2025-05-24.csv  tipranks_2025-05-24_part1.csv  tipranks_2025-05-24_part2.csv  tipranks_2025-05-31.csv  tipranks_2025-05-31_part1.csv  tipranks_2025-05-31_part2.csv  tipranks_2025-06-07.csv  tipranks_2025-06-07_part1.csv  tipranks_2025-06-07_part2.csv  tipranks_2025-06-14.csv  tipranks_2025-06-14_part1.csv  (+72 more)
